# voice-cloner

./: .cz.toml  .github-ci.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  TODO.txt  appGradio.py  mypy.ini.txt  pyproject.toml
src/: App_Finetuning.py  App_Inference.py  Recipe.ipynb  __init__.py  appGradio.py  test.ipynb  test_app.py
src/documentation/config/: logging.conf
src/utils/: finetuning.py  gradio_helpers.py  stt_pipeline.py  tts_pipeline.py
utils/: stt_pipeline.py  test.ipynb  utils_gradio.py
