[tool.poetry]
name = "gradiovoicecloner"
version = "0.1.0"
description = "Web application (Gradio) in Python for Voice Cloning using One Shot Classification or Finetuning."
authors = ["Grégoire Remy <gregoire2705@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gradio = "^4.39.0"
tts = "^0.22.0"
whisperx = "^3.1.5"
pytube = "^15.0.0"
huggingface-hub = "^0.24.3"
pydub = "^0.25.1"
soundfile = "^0.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"
mypy = "^1.11.0"

[tool.black]
line-length = 88
target-version = ['py310']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
